--- a/routes/Departamento/Views/Detalhe-depart-Adm-editar.html
+++ b/routes/Departamento/Views/Detalhe-depart-Adm-editar.html
@@ -27,7 +27,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
-    <title>Departamento/Detalhes</title>
+    <title>Departamento/Editar</title>
 </head>
 
 <body>
@@ -73,24 +73,38 @@
 
 
             <div class="row">
-                <div class="col d-flex justify-content-center ">
+                <div class="col d-flex justify-content-center">
                     <div class="box-add-edit-departament">
-                        <div>
-                            <div class="pt-2">
-                                <p>Nome do departamento</h5>
+                        <div class="row d-flex ">
+                            <div class="d-flex flex-column pb-4 px-4">
+                                <p>Nome do departamento</p>
                                 <input type="text" placeholder="Financeiro">
                             </div>
-                            <div class="pt-4">
-                                <div class="col">
-                                    <p>Sigla do Departamento</h5>
-                                <input type="text" placeholder="No máximo 12 caracteres">
-                                </div>
-                                <div class="col">
-                                    <p>Gestor atual do setor</h5>
+
+                            <div class="d-flex justify-content-evelny px-4">
+                                <div class="col pe-4 box-add">
+                                    <p>Sigla do Departamento</p>
                                     <input type="text" placeholder="No máximo 12 caracteres">
                                 </div>
-                            </div>
-                            
+
+                                <div class="col ">
+                                    <p>Gestor atual do setor</p>
+                                    <div class="pe-5">
+                                        <button class="btn-select">
+                                            <select name="" id="">
+                                                <option value="1"> Financeiro Administrativo</option>
+                                                <option value="2">Financeiro Administrativo</option>
+                                                <option value="3">Financeiro Administrativo</option>
+                                            </select>   
+                                           <svg width="20" height="19" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <rect x="0.5" y="1" width="15" height="15" rx="3.5" stroke="#AEAEAE"/>
+                                                <path d="M5 7.5L8 10.5L11 7.5" stroke="#AEAEAE" stroke-linecap="round"/>
+                                                </svg> 
+                                                                 
+                                        </button>
+                                        </div>
+                                </div>
+                            </div>                            
                         </div>
                         <div class="d-flex justify-content-end pt-4">
                             <button class="btn-cta-members">
@@ -106,10 +120,14 @@
 
 
                 <div class="row pt-5 px-5 pb-4 d-flex justify-content-between">
-                    <div class="col">
-                            <button>
-                                numero
-                            </button>
+                    <div class="col ps-4">
+                            <div class="icon-number">
+                                <svg width="28" height="28" viewBox="0 0 28 28" fill="#a1a1a1;" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M2.33331 14.0002C2.33331 7.55684 7.55666 2.3335 14 2.3335C20.4433 2.3335 25.6666 7.55684 25.6666 14.0002C25.6666 20.4435 20.4433 25.6668 14 25.6668C7.55666 25.6668 2.33331 20.4435 2.33331 14.0002Z" fill="#B7B9B9" fill-opacity="0.8"/>
+                                    <path d="M14 2.3335C7.55998 2.3335 2.33331 7.56016 2.33331 14.0002C2.33331 20.4402 7.55998 25.6668 14 25.6668C20.44 25.6668 25.6666 20.4402 25.6666 14.0002C25.6666 7.56016 20.44 2.3335 14 2.3335ZM14 5.8335C15.9366 5.8335 17.5 7.39683 17.5 9.3335C17.5 11.2702 15.9366 12.8335 14 12.8335C12.0633 12.8335 10.5 11.2702 10.5 9.3335C10.5 7.39683 12.0633 5.8335 14 5.8335ZM14 22.4002C11.0833 22.4002 8.50498 20.9068 6.99998 18.6435C7.03498 16.3218 11.6666 15.0502 14 15.0502C16.3216 15.0502 20.965 16.3218 21 18.6435C19.495 20.9068 16.9166 22.4002 14 22.4002Z" fill="white"/>
+                                    </svg>
+                                    <span>6</span>
+                            </div>
                             
                     </div>    
 
@@ -120,9 +138,7 @@
                                 <path d="M11.5365 11.18L11.6091 11.25H11.71H12.3963L17.1366 15.9998L15.9998 17.1366L11.25 12.3963V11.71V11.6091L11.18 11.5365L10.91 11.2565L10.7461 11.0865L10.567 11.2404C9.47058 12.183 8.04787 12.75 6.5 12.75C3.04807 12.75 0.25 9.95193 0.25 6.5C0.25 3.04807 3.04807 0.25 6.5 0.25C9.95193 0.25 12.75 3.04807 12.75 6.5C12.75 8.04787 12.183 9.47058 11.2404 10.567L11.0865 10.7461L11.2565 10.91L11.5365 11.18ZM1.75 6.5C1.75 9.12807 3.87193 11.25 6.5 11.25C9.12807 11.25 11.25 9.12807 11.25 6.5C11.25 3.87193 9.12807 1.75 6.5 1.75C3.87193 1.75 1.75 3.87193 1.75 6.5Z" fill="#C4C4C4" stroke="white" stroke-width="0.5"/>
                                 </svg>
                                  </button>
-                        </div>
-    
-                                     
+                        </div>     
                 </div>
 
                 <div class="row">
