--- a/style/card/View-perfil.css
+++ b/style/card/View-perfil.css
@@ -212,3 +212,29 @@ z-index: 2000;
     display: flex;
     justify-content: space-between;
 }
+
+.desabilitado{
+    color:#d4d4d4;
+}
+
+
+.desabilitado select{
+    /* width: 120px !important; */
+    color:#e7e7e7 !important;
+    border: 1px solid #e7e7e7 !important;
+}
+
+
+.desabilitado svg{
+    stroke:#e7e7e7 !important;
+    opacity: 60% !important;
+}
+
+.profile-user input{
+    width: 150px;
+}
+
+
+.profile-genero select{
+    width: 60px !important
+}
