etapa-final-frontend

--- a/style/main.css
+++ b/style/main.css
@@ -129,3 +129,15 @@ textarea{ /*Desativar o resize do textarea*/
     padding: 20px 0 0 0;
 }
 
+/**/
+
+.help{
+    width: 800px !important;
+    
+}
+
+.help .accordion .svg-icon{
+    font-size: 1.2rem !important;
+    padding: 4px 0 0 0 !important;
+    color: rgb(141, 141, 141) !important;
+}
