--- a/style/card/Edit-departament.css
+++ b/style/card/Edit-departament.css
@@ -8,7 +8,7 @@
 }
 .box-add-edit-departament p{
     margin:1px 0 0 0;
-    color:#4d4d4d;;
+    color:#4d4d4d;
 }
 
 .box-add-edit-departament input{
@@ -18,6 +18,7 @@
     height: 40px;
     outline: none !important;
     padding: 0 8px;
+    width: 100%;
 }
 
 .box-add-edit-departament input:focus{
@@ -48,4 +49,14 @@
 
 .icon-number span{
     font-size:0.9rem;
+}
+
+
+.add-apart {
+   background-color: #D8F9DD;
+   color: #025B00;
+   border-radius: 8px;
+   border:none;
+   padding: 8px 20px;
+   font-size: 15px;
 }
