--- a/style/card/card-requeriment.css
+++ b/style/card/card-requeriment.css
@@ -165,6 +165,15 @@ input[type=search]::selection{
     pointer-events:none;
 }
 
+.i-search-title{
+    width: 22px !important;
+    background-color: #ffffff;
+    display: block;
+    position: absolute;
+    margin: -36px 0 0 822px;
+    pointer-events:none;
+}
+
 .dinheiro{
     color: #696969;
     font-weight: 300;
@@ -229,3 +238,88 @@ input[type=search]::selection{
 .list-product{
     cursor: pointer;
 }
+
+/**/
+
+.card-feedback{
+    width: 800px;
+    height: auto;
+    border-radius: 16px;
+    padding: 50px 80px 130px 50px;
+    position: absolute;
+    background-color: white;
+    box-shadow: #00000048 8px 8px 8px;
+}
+
+
+.btn-edit{
+    padding: 4px 16px;
+    background-color:#ffffff;
+    color:#FF9900;
+    border-radius: 8px;
+    border:2px solid #FF9900;
+}
+
+
+.btn-edit:hover{
+    color:#FF9900;
+}
+
+.btn-aproved{
+    padding: 4px 16px;
+    background-color:#A0F1AB;
+    color:#025B00;
+    border-radius: 8px;
+    border: none;
+}
+
+.btn-aproved a{
+    color:#025B00;
+    text-decoration: none;
+}
+
+
+.btn-aproved a:hover{
+    color:#025B00;
+    text-decoration: none;
+}
+
+
+.box-btn{
+    width: 380px;
+}
+
+.btn-trash{
+    padding: 4px 16px;
+    background-color:#F1A0A0;
+    color:#5B0000;
+    border-radius: 8px;
+    border: none;
+}
+
+
+
+
+
+.btn-trash a{
+    color:#5B0000;
+    text-decoration: none;
+}
+
+.btn-trash a:hover{
+    color:#5B0000;
+    text-decoration: none;
+}
+
+.wallpaper{
+    display: block;
+   
+    background-color: rgb(78, 78, 78);
+    position:absolute;
+    z-index: 5000; 
+    background-color:rgba(0, 0, 0, 0.301); 
+    height: 99.9vh; 
+    width:99vw;
+
+}
+
