--- a/style/nav/header.css
+++ b/style/nav/header.css
@@ -41,14 +41,14 @@
     text-align: right;
     margin: 0;
     padding: 0;
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .card-profile h4{
     text-align: right;
     margin: 0;
     padding: 0;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 600;
 }
 
@@ -69,3 +69,106 @@ header{
     font-family: 'Lexend', sans-serif;
 }
 
+
+@media (min-width:325px) and (max-width:450px){
+    .container{
+        width: 99vw;
+    }
+
+    .profile img{
+        width: 50px !important;
+        height: auto; 
+    }
+
+    .card-profile{
+        /* display: none; */
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .card-profile h4 p {
+        font-size:0.8rem !important;
+    }
+
+    .notification img{
+        width: 16px;
+        position:absolute;
+        margin:-12px 32px ;
+    }
+
+    .subtitle{
+        width: 99%;
+        padding: 0 2px;
+        font-size: 0.8rem !important;
+    }
+
+    header{
+        display: flex;
+        flex-direction:column-reverse;
+        justify-content: center;        
+    }
+
+    header h4, h3, p {
+        font-size:1rem !important;
+    }
+
+
+    .menu{
+        width: 30vw !important;
+        height: 15vh !important;
+    }
+
+    .suspenso{
+        width:100%;
+        font-size:0.8rem;
+    }
+
+    .suspenso ul{
+        width: 99% !important;
+        padding: 8px !important;
+    }
+
+    .box-menu{
+        display: none !important;
+        padding: 0 10px !important;
+    }
+
+    .input-search{
+        padding: 0 50px !important;
+        background-color: red;
+    }
+
+    .input-search input{
+        width:80vw !important;
+    }
+
+    .input-search button{
+        border: none;
+        background-color: #c4c4c400;
+        position: absolute;
+        justify-content: center;
+        margin:0 !important;
+    }
+    .input-search button svg:hover{
+        width: 8px;
+        height:8px;
+        transition: 0.8s;
+        padding: 2%;
+    }
+
+    .table{
+        width: 30vw !important;
+        background-color: pink;
+    }
+
+    .table-light-green{
+        width: 30vw !important;
+        background-color: blue;
+    }
+
+    .bg-table {
+        width: 20vw !important;
+    }
+
+}
