--- a/style/nav/header.css
+++ b/style/nav/header.css
@@ -70,7 +70,7 @@ header{
 }
 
 
-@media (min-width:325px) and (max-width:450px){
+@media (min-width:325px) and (max-width:800px){
     .container{
         width: 99vw;
     }
@@ -84,11 +84,18 @@ header{
         /* display: none; */
         display: flex;
         flex-direction: column;
+        justify-content: left;
         width: 100%;
+        padding: 0 0 0 150px !important;
     }
 
-    .card-profile h4 p {
+    .card-profile h4 {
         font-size:0.8rem !important;
+    }
+
+    
+    .card-profile p {
+        font-size:0.6rem !important;
     }
 
     .notification img{
@@ -97,13 +104,17 @@ header{
         margin:-12px 32px ;
     }
 
+    h3{
+        padding: 0 0 0 8px;
+    }
     .subtitle{
-        width: 99%;
-        padding: 0 2px;
+        width: 80%;
+        padding: 0 8px 0 8px;
         font-size: 0.8rem !important;
     }
 
     header{
+        width: 100%;
         display: flex;
         flex-direction:column-reverse;
         justify-content: center;        
@@ -134,41 +145,9 @@ header{
         padding: 0 10px !important;
     }
 
-    .input-search{
-        padding: 0 50px !important;
-        background-color: red;
+    .articles{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
     }
-
-    .input-search input{
-        width:80vw !important;
-    }
-
-    .input-search button{
-        border: none;
-        background-color: #c4c4c400;
-        position: absolute;
-        justify-content: center;
-        margin:0 !important;
-    }
-    .input-search button svg:hover{
-        width: 8px;
-        height:8px;
-        transition: 0.8s;
-        padding: 2%;
-    }
-
-    .table{
-        width: 30vw !important;
-        background-color: pink;
-    }
-
-    .table-light-green{
-        width: 30vw !important;
-        background-color: blue;
-    }
-
-    .bg-table {
-        width: 20vw !important;
-    }
-
 }
