--- a/style/table/light-green.css
+++ b/style/table/light-green.css
@@ -15,8 +15,8 @@
 .table-light-green thead{
     background-color: #D8F9DD;
     color: #0C5816;
-    height: 80px;
-    width: 500px;
+    height: 8.2vh; /* 80px*/
+    width: 26.04vw; /* 500px*/
   
 }
 
@@ -27,7 +27,7 @@
 
 
 .table-light-green tbody tr th{
-    width: 250px;
+    width:13vw; /* 250px*/
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -48,7 +48,77 @@ tr:active {
 }
     
     
+@media(min-width:250px) and (max-width:800px){
+    
+   .table{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border: 1px solid #666666;
+    padding: 2% 0 !important;
+   } 
 
+   .table>:not(caption)>*>* {
+    padding: .5rem .5rem;
+    background-color: var(--bs-table-bg);
+    border-bottom-width: 0 !important;
+    box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
+}
+
+    .table-light-green thead tr th{       
+        display: none;
+       
+    }
+
+    .table-light-green thead{
+        height: 40px !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: auto;
+    }
+    .show-title{
+        display: flex !important;
+        align-items: center;
+        justify-content: center;
+        width:auto !important;
+        height: 24px !important;
+    }
+
+        
+    .table-light-green tbody tr th{
+        width: 250px !important;
+        border-right: 1px solid #cecece;
+        border-bottom: 1px solid #cecece !important;
+     }
+
+    .table-light-green tbody td{
+        display: none;
+    }
+
+
+
+    .status-table{
+        display: block !important;
+        visibility: visible !important;
+        border-bottom: 1px solid #cecece !important;
+    }
+
+    
+    .n{
+        display: block !important;
+        visibility: visible !important;
+    }
+
+
+    .bg-table{
+        display: flex;
+        justify-content: center;
+        width: auto !important;
+    }
+
+
+}
 
 
 .select-style-green{
