--- a/style/table/white-history.css
+++ b/style/table/white-history.css
@@ -25,3 +25,54 @@
     margin: 2% 8%;
     font-size:24px;
 }
+
+@media(min-width:250px) and (max-width:800px){
+    .table-white{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .title-history{
+        font-size:2rem;
+        padding-bottom: 15px;
+        
+        justify-content: center;
+        display: flex;
+    }
+
+    .card-infor{
+        width: 50vw;
+    }
+    
+    .card-infor h2{
+        font-size:1.5rem;
+    }
+
+    .description-filter{
+        display: none;
+    }
+
+    .sm-history{
+        display: flex;
+        flex-direction: column-reverse;
+        margin: -80px 0 0 0 !important;
+    }
+    .filter-historico{
+        margin:20px 0 0 0 !important; 
+        display: flex;
+        justify-content: space-between !important;
+    }
+
+    .filter-historico select{
+        width: 120px;
+    }
+
+    .andamento{
+       display: none;
+    }
+
+    .input-search{
+        font-size:12px !important;
+    }
+}
