--- a/style/card/Edit-departament.css
+++ b/style/card/Edit-departament.css
@@ -6,6 +6,7 @@
     height: auto;
     border: 1px solid #a1a1a1;
 }
+
 .box-add-edit-departament p{
     margin:1px 0 0 0;
     color:#4d4d4d;
@@ -59,4 +60,16 @@
    border:none;
    padding: 8px 20px;
    font-size: 15px;
+}
+
+@media (min-width:250px) and (max-width:800px){
+    .box-add-edit-departament{
+        width: 99vw !important;
+        padding: 32px 0 16px 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center !important;
+        border:none;
+        background-color: red;
+    }
 }
