--- a/style/search/search.css
+++ b/style/search/search.css
@@ -53,6 +53,13 @@
     height: 26px;
     transition: 0.8s;
     padding: 2%;
+    
+}
+
+.btn-search{
+    background-color: #ffffffe1 !important;
+    padding: 0 10px;
+    border-radius: 8px;
 }
 
 @media(min-width:250px) and (max-width: 800px){
