--- a/style/table/light-green.css
+++ b/style/table/light-green.css
@@ -3,12 +3,13 @@
     justify-content: center;
     width: 800px;
     padding: 0 20%;
-    
+    margin: 0 48px;
     font-size:14px;
     align-items: center;
     font-weight: 400;
     font-family: 'Inter';
-    text-align: center;
+    text-align: center;/* 
+    margin: 0 4px; */
 }
 
 
@@ -37,10 +38,10 @@
 
 tbody:hover tr:hover {
     padding: 20px 0;
-    border-width: 2px;
+    border-width: 1px;
     color: #000000;
     height: 40px;
-    transition: 1s;
+    transition: 0.6s;
 }
 
 tr:active {
@@ -115,6 +116,7 @@ tr:active {
         display: flex;
         justify-content: center;
         width: auto !important;
+       /*  margin:0 4px; */
     }
 
 
