--- a/routes/Departamento/Views/Card-profile-Adm-Config.html
+++ b/routes/Departamento/Views/Card-profile-Adm-Config.html
@@ -27,8 +27,6 @@
 </head>
 
 <body>
-
-
     <div class="page-card"> <!---Essa página do card de profile, vai sobrepor outras-->
         <div class="card-details-profile-config">
             <div class="d-flex">
@@ -37,7 +35,7 @@
             </div>
             <div class="title-card ps-3">
                 <h4>Cláudio Luiz</h4>
-                <div class="pt-2 d-flex justify-content-between">
+                <div class="pt-2 d-flex justify-content-between box-card">
                     <div class="pe-5">
                     <button class="btn-select">
                         <select name="" id="">
