finalização de chamada

--- a/routes/Departamento/Views/Card-profile-Adm-Config.html
+++ b/routes/Departamento/Views/Card-profile-Adm-Config.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/img/logo-favicon.png" type="image/x-icon">
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="/style/main.css">
+    <link rel="stylesheet" type="text/css" href="/uniavan/style/main.css">
     <link rel="stylesheet" href="/style/nav/header.css">
     <link rel="stylesheet" href="/style/nav/navbar.css">
     <link rel="stylesheet" href="/style/search/search.css">
