--- a/routes/Departamento/Views/Card-profile-Adm.html
+++ b/routes/Departamento/Views/Card-profile-Adm.html
@@ -8,13 +8,13 @@
     <link rel="shortcut icon" href="/img/logo-favicon.png" type="image/x-icon">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/style/main.css">
-    <link rel="stylesheet" href="/style/nav/header.css">
-    <link rel="stylesheet" href="/style/nav/navbar.css">
-    <link rel="stylesheet" href="/style/search/search.css">
-    <link rel="stylesheet" href="/style/table/light-green.css">
-    <link rel="stylesheet" href="/style/table/light-blue.css">
-        <link rel="stylesheet" href="/style/Tag/tags.css"> <!--tags-->
-    <link rel="stylesheet" href="/style/card/View-perfil.css">
+    <link rel="stylesheet" href="/uniavan/style/nav/header.css">
+    <link rel="stylesheet" href="/uniavan/style/nav/navbar.css">
+    <link rel="stylesheet" href="/uniavan/style/search/search.css">
+    <link rel="stylesheet" href="/uniavan/style/table/light-green.css">
+    <link rel="stylesheet" href="/uniavan/style/table/light-blue.css">
+        <link rel="stylesheet" href="/uniavan/style/Tag/tags.css"> <!--tags-->
+    <link rel="stylesheet" href="/uniavan/style/card/View-perfil.css">
         <!-- Fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,6 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
     <title>Departamento/Detalhes</title>
 </head>
 
