--- a/routes/Departamento/Views/Card-profile-Geral.html
+++ b/routes/Departamento/Views/Card-profile-Geral.html
@@ -46,7 +46,8 @@
             </div>
             <div>
                 <div class="border-exit">
-                    <div class="btn-exit"> 
+                    <div class="btn-exit" onclick="back()"> 
+                       
                         <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M2 1L10 11" stroke="#717171" stroke-width="2" stroke-linecap="round"/>
                         <path d="M2 11L10 1.00003" stroke="#717171" stroke-width="2" stroke-linecap="round"/>
@@ -179,6 +180,7 @@
 
             </div>
         </div>
+        <script src="/js/main.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
                 integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
                 crossorigin="anonymous"></script>
