--- a/routes/Departamento/Views/Detalhe-depart-Adm-editar.html
+++ b/routes/Departamento/Views/Detalhe-depart-Adm-editar.html
@@ -48,7 +48,7 @@
         <div class="row">
             <div class="row ">
                 <div class="col">
-                    <header class="d-flex justify-content-between px-5">
+                    <header class="d-flex justify-content-between px-5 detail">
                         <div class=" pt-4">
                             <button class="btn-back-page" onclick="history.back()"> 
                                
