--- a/routes/Departamento/Views/Detalhe-depart-Adm.html
+++ b/routes/Departamento/Views/Detalhe-depart-Adm.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="/style/table/light-green.css">
     <link rel="stylesheet" href="/style/table/light-blue.css">
         <link rel="stylesheet" href="/style/Tag/tags.css"> <!--tags-->
+        <link rel="stylesheet" href="/style/card/View-perfil.css">    
+    <link rel="stylesheet" href="/style/card/view-config-chamada.css">
+    <link rel="stylesheet" href="/style/filter/filter.css">    
+    <link rel="stylesheet" href="/style/card/Edit-departament.css">  
     <!-- Fonte -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,12 +26,11 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-
     <title>Departamento/Detalhes</title>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container sm-n">
         <div class="nav">
             <div>
                 <img src="/img/Logo M.png" alt="">
@@ -44,7 +47,7 @@
         <div class="row">
             <div class="row">
                 <div class="col">
-                    <header class="d-flex justify-content-between px-5">
+                    <header class="d-flex justify-content-between px-5 detail">
                         <div class=" pt-4">
                             <button class="btn-back-page" onclick="history.back()"> 
                                
@@ -74,7 +77,7 @@
                 
 
 
-                <div class="row pt-5 px-5">
+                <div class="row pt-5 px-5 detail-depart-adm">
                         <div class="col input-search pe-5">
                             <input type="text" class="form-control shadow-none" arial-label="exemple" placeholder="Buscar por nome, departamento"/>
                             <button>
@@ -84,7 +87,7 @@
                                  </button>
                         </div>
     
-                        <div class="col d-flex ps-5"  style="margin-left:500px">
+                        <div class="col d-flex ps-5  ">  <!-- style="margin-left:500px" -->
                             <div class="pe-2 ">
                                 <button class="btn-blue-stroke d-flex justify-content-around ">
                                     <div>
