--- a/routes/Departamento/Views/Detalhe-depart-view-geral.html
+++ b/routes/Departamento/Views/Detalhe-depart-view-geral.html
@@ -41,10 +41,10 @@
             </ul>
         </div>
 
-        <div class="row">
+        <div class="row view-geral">
             <div class="row">
                 <div class="col">
-                    <header class="d-flex justify-content-between px-4">
+                    <header class="d-flex justify-content-between px-4 ">
                         <div class=" pt-4">
                             <button class="btn-back-page" onclick="history.back()"> 
                                
@@ -57,22 +57,13 @@
     
                         
                         <div class="d-flex flex-row align-middle">
-                            
                             <div>
                                 <h5>Financeiro Administrativo</h5>
                             </div>
-                            
                         </div>
                     </header> 
                 </div>
             </div>
-
-
-
-
-
-                
-
 
                 <div class="row pt-5">
                     <div class="col input-search">
@@ -87,7 +78,7 @@
 
 
                 <div class="row">
-                    <div class="col bg-table px-5">
+                    <div class="col bg-table ">
                         <table class="table table-light-blue">
                             <thead>
                                 <tr>
