--- a/style/card/notification.css
+++ b/style/card/notification.css
@@ -6,3 +6,19 @@
     justify-content: right;
     padding: 14px 0;
 }
+
+.notion header{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.notion header h4{
+    margin:18px 0 0 0;
+}
+
+.card-notification{
+    width: 90vw;
+    
+}
